--- a/src/sass/modules/_header.sass
+++ b/src/sass/modules/_header.sass
@@ -27,12 +27,8 @@ nav
        display: flex 
        justify-content: space-between
        gap: 3vw
-    #Check
-        display: none
-    .label
-        display: none
-        .icon
-           color: black       
+    .display-menu
+        display: none     
     
 
     .leftside-menu
@@ -63,7 +59,7 @@ nav
                 background-color: #fa3434
 @media (max-width :428px)
    nav
-    .label
+    .display-menu
         display: flex
 
     
@@ -86,8 +82,7 @@ nav
         color: black    
        
     
-    #Check:checked ~ .menu
-        display: flex
+    
     
 
 .modal
